Deluge 1.0.5 (In Development)
 GtkUI:
  * Increase the per-torrent stop share ratio max to 99999.0

 WebUi:
  * Javascript auto refresh for both templates.

 Windows:
  * Fix #577 adding torrents by drag n' drop

Deluge 1.0.4 (31 October 2008)
 Core:
  * Fix #560 force an int value for global max connections
  * Fix #545 use proper values in ratio calculation
  * Fix UPnP again..

 GtkUI:
  * Fix #565 wait for the deluged process to start to prevent defunct processes

 OS X:
  * Fix issues with gettext

 Windows:
  * Fix starting on non-English versions of Windows

Deluge 1.0.3 (18 October 2008)
 Core:
  * Fix upnp - it should work on more routers now too
  * Fix issue where Deluge would send improper stats to the tracker after a
    pause/resume.
  * Fix issue where fastresume files would be rejected when using FAT32.  This
    would cause the torrent to be rechecked on every startup.
  * Fix ip filtering

 GtkUI:
  * Re-add the "Max Connections Per Second" option with a default setting of 20

 WebUI:
  * Fix White template for Opera

 Misc:
  * Deluge will now use a system libtorrent library if available.
  * The build system will no longer build libtorrent if a system library is
    detected.

Deluge 1.0.2 (10 October 2008)
 Core:
  * Fix issue where torrents will not be properly added to the session

Deluge 1.0.1 (10 October 2008)
 Core:
  * Change the default max global upload slots to 4 instead of -1 since libtorrent
    will automatically open more slots to meet the upload speed limit.
  * Fix display of tracker error messages
  * Fix add_torrent_url() to download the torrent file in a thread to prevent
    the main thread from blocking and causing the daemon to freeze.
  * Removed the 'Maximum Connections Per Second' setting and replaced it with a
    default setting of 20.  This should alleviate speed issues some are experiencing.
  * Changed max half-open connections default limit to 8 on XP/2000 and 4 on Vista